force-app/main/default/objects/LinkedIns_Token__mdt/LinkedIns_Token__mdt.object-meta.xml
<CustomObject>
    <label>LinkedIns Token</label>
    <pluralLabel>LinkedIn Tokens</pluralLabel>
</CustomObject>