force-app/main/default/objects/LinkedIns_Token__mdt/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <label>Access Token</label>
    <type>TextArea</type>
</CustomField>