force-app/main/default/objects/LinkedIns_Token__mdt/fields/LinkedIn_User_Email__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_User_Email__c</fullName>
    <label>LinkedIn User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>