force-app/main/default/objects/LinkedIns_Token__mdt/fields/LinkedIn_User_Picture__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_User_Picture__c</fullName>
    <label>LinkedIn User Picture</label>
    <type>TextArea</type>
</CustomField>