force-app/main/default/objects/LinkedIns_Token__mdt/fields/Token_Type__c.field-meta.xml
<CustomField>
    <fullName>Token_Type__c</fullName>
    <label>Token Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>